MAINT-2596 Allow whitelisting of other mrcm validator failures